--- a/main1.ui
+++ b/main1.ui
@@ -1428,36 +1428,17 @@
               <property name="minimumSize">
                <size>
                 <width>20</width>
-                <height>85</height>
+                <height>180</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
                 <width>20</width>
-                <height>85</height>
+                <height>180</height>
                </size>
               </property>
               <property name="text">
-               <string>+</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="pushButton_remove">
-              <property name="minimumSize">
-               <size>
-                <width>20</width>
-                <height>85</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>20</width>
-                <height>85</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>-</string>
+               <string>&gt;&gt;</string>
               </property>
              </widget>
             </item>
